--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,6 @@ nav h1 {
   padding: 20px;
 }
 
-/* smoothie grid */
 .game-grid {
   margin-top: 40px;
   display: grid;
@@ -60,4 +59,29 @@ nav h1 {
   padding: 20px 0;
   line-height: 0px;
   text-align: center;
+}
+
+form {
+  background: #fff;
+  padding: 20px;
+  max-width: 480px;
+  margin: 0 auto;
+  border-radius: 6px;
+}
+form input, form textarea {
+  display: block;
+  width: 100%;
+  padding: 6px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  margin: 10px 0 20px 0;
+}
+form button {
+  background: var(--primary);
+  color: #fff;
+  border: 0;
+  border-radius: 6px;
+  padding: 6px 8px;
+  font-family: "Poppins";
+  cursor: pointer;
 }
