Fetched records from supabase for update page

--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,16 @@ form button {
   font-family: "Poppins";
   cursor: pointer;
 }
+
+.game-card .buttons {
+  text-align: right;
+}
+.game-card i {
+  color: #bbb;
+  margin-left: 10px;
+  font-size: 1.2em;
+  padding: 6px;
+  background: #eee;
+  border-radius: 50%;
+  cursor: pointer;
+}
